--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: UHF server for Home Assistant
-url: https://github.com/YannickSki/home-assistant-ugf-addon
+url: https://github.com/YannickSki/home-assistant-uhf-addon.git
 maintainer: Yannick van Loon (yannickvanloon1999@gmial.com)
